Configuration panel for grids and forms now works cleaner and more consistently.
New: "scopes" configuration option added to GridPanel to specify the searchlogic-compatible scope for the data.
New: "strong_default_attrs" config option added to GridPanel to specify the attributes that will be assigned to each record that is created or modified by the grid.

v0.4.2
2009-05-07
Fix: afterlayout event bind removed completely because of some tricky inconsistent behavior of Ext. BasicApp initializing code put directly into js_after_constructor.

v0.4.1
2009-05-07
Fix: afterlayout call moved to js_after_constructor in BasicApp
Fix: cleaner persistent_config handling
New: default's configuration enabled for FormPanel on class-level
Fix: differently configured forms on the same page were showing the same columns
Fix: TableEditor was showing config-tool by default (must be hidden)

v0.4.0
2009-05-07
Refactor: got rid of NetzkeFormPanelField and NetzkeGridPanelColumn classes along with their tables. The layout is now stored in netzke_preferences.
New: dynamic hiding of columns from column menu in GridPanel.
New: FormPanel now supports combo boxes.
Fix: config[:bbar] set to 'false' now works in grids with pagination
New: you can specify :preloaded => true in a tab config in TabPanel to preload the widget in that tab along with the TabPanel itself
New: hideBusy added to Ext.StatusBar
Fix: assigning association (a Boss to a Clerk) by virtual column (like boss__name) works now
Fix: an old bug that made GridPanel misbehave after reordering the columns

v0.3.10
BasicApp-based widgets can now introduce arbitrary layout, following the convention of defining "main-panel" and "main-toolbar" panels with layout 'fit'.

v0.3.9.1
Bug fix: (regression) appLoaded() in BasicApp gets executed again

v0.3.9
AccordionPanel tests added
TabPanel works now
AccordionPanel replaced with more intuitive TabPanel in the configuration window